# tftpStressTest

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md
adapters/: example_system_tftp_client.hpp  subprocess_client_adapter.cpp  subprocess_client_adapter.hpp
adapters/reference/: reference_adapters.cpp  reference_adapters.hpp  tftp_reference_engine.cpp  tftp_reference_engine.hpp
adapters/tftpclient/: tftpclient_adapter.hpp
adapters/tftpd64/: tftpd64_client_adapter.cpp  tftpd64_client_adapter.hpp  tftpd64_process.cpp  tftpd64_process.hpp  tftpd64_server_adapter.cpp  tftpd64_server_adapter.hpp
apps/: compare_main.cpp  report_main.cpp  runner_main.cpp
docs/: ARCHITECTURE.md  RFC_CONFORMANCE_MATRIX.md  TFTP_STRESS_HARNESS_PROMPT.md
include/tftp_test_harness/: adapter_interface.hpp
results/: clients_compared.html  comparison.html  tftpclient.json  tftpclient_report.html  tftpclient_vs_reference.html  tftpd64.json  tftpd64_client_final.json  tftpd64_client_report.html  tftpd64_report.html
src/fixtures/: fixture_generator.cpp  fixture_generator.hpp
src/metrics/: json_writer.cpp  json_writer.hpp  metrics_store.cpp  metrics_store.hpp
src/net/: deterministic_prng.hpp  endpoint.cpp  endpoint.hpp  impairment_proxy.cpp  impairment_proxy.hpp  impairments.cpp  impairments.hpp  netascii.cpp  netascii.hpp  packet_trace.hpp  socket_platform.cpp  socket_platform.hpp  tftp_packet.cpp  tftp_packet.hpp  udp_socket.cpp  udp_socket.hpp
src/report/: comparison_report.cpp  comparison_report.hpp  html_report.cpp  html_report.hpp  report_model.cpp  report_model.hpp
src/runner/: runner.cpp  runner.hpp  test_case.hpp  test_registry.cpp  transfer_driver.cpp  transfer_driver.hpp
src/verify/: content_oracle.cpp  content_oracle.hpp  packet_observer.cpp  packet_observer.hpp  sha256.cpp  sha256.hpp
tests/: test_impairments.cpp  test_metrics_json.cpp  test_proxy_end_to_end.cpp  test_reference_engine.cpp  test_self_verification.cpp  test_sha256.cpp  test_support.hpp  test_tftp_packet.cpp  test_verify.cpp
tools/tftpd64/: driver.py
